--- a/2023/Day15/Day15.fsproj
+++ b/2023/Day15/Day15.fsproj
@@ -9,4 +9,8 @@
     <Compile Include="Program.fs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FSharp.Data.Adaptive" Version="1.2.14" />
+  </ItemGroup>
+
 </Project>
